Created player class for future use, constructor for Game class created

--- a/todo.txt
+++ b/todo.txt
@@ -3,8 +3,11 @@
     - int startNumber
     - int numberTaken
     - int currentNum
-    - int[] winLoss
+    - static int totalGames
+
     [ ] LogicChecker Subclass
         -blahblahblah
     [ ] Display Subclass
         -Wharever later
+[ ] Player class
+    - int[] winLoss
